--- a/print.html
+++ b/print.html
@@ -926,6 +926,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 <div style="break-before: page; page-break-before: always;"></div><h1 id="page-setup"><a class="header" href="#page-setup">Page Setup</a></h1>
 <p>The sections below look at the sections of the Excel Page Setup dialog and the
 equivalent rust_xlsxwriter methods.</p>
+<p>For more, general, information about the page setup options in Excel see the Microsoft documentation on <a href="https://support.microsoft.com/en-us/office/page-setup-71c20d94-b13e-48fd-9800-cedd1fec6da3">Page Setup</a>.</p>
 <h2 id="page-setup---page"><a class="header" href="#page-setup---page">Page Setup - Page</a></h2>
 <p>The page Setup &quot;Page&quot; dialog looks like this:</p>
 <p><img src="worksheet/../images/page_setup01.png" alt="Image of Page Setup Dialog Page section" /></p>
